welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var
while(!sortieTrouvee()){
	var b = 0
	do {
		avance()
	}while(!croisement) {
		while(!estSurBiscuit){
			avance()
		}
		b = b+1
	}
	if (b>=3){
		gauche()
	} else {
		droite()
	}
	
}
